tinyc/test/good/enum-singleton.c
int main()
{
    enum {
        x
    };

    return 0;
}
