tinyc/test/bad/void-as-bool-and-l.c
void v() {}

int main()
{
    v() && true;
    return 0;
}
